--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,15 @@ body{
       
       
 }
+ # Live link
+  
+https://bundiroberts.github.io/Text-Animation/
+  
+
+# Languages used
+
+  HTML
+
+  CSS
+
+  JAVASCRIPT
